--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -37,7 +37,7 @@ msgid "genweb-perfil"
 msgstr "Perfil"
 
 #. "Vés al contingut (premeu Retorn)"
-msgid "Vés al contingut (premeu Retorn)"
+msgid "skip_to_content"
 msgstr "Vés al contingut (premeu Retorn)"
 
 #. "genweb_content_actions_vista_de_carpeta"
