--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -41,7 +41,7 @@ msgid "genweb-perfil"
 msgstr "Profile"
 
 #. "Vés al contingut (premeu Retorn)"
-msgid "Vés al contingut (premeu Retorn)"
+msgid "skip_to_content"
 msgstr "Skip to content"
 
 #. "genweb_content_actions_vista_de_carpeta"
