--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -979,3 +979,9 @@ msgstr "Nom usuari"
 msgid "label_password"
 msgstr "Contrasenya"
 
+msgid "title_dir_upc"
+msgstr "Clica el marcador per anar al Directori UPC"
+
+msgid "title_upcmaps"
+msgstr "Clica el marcador per anar a UPCmaps"
+
