--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1833,3 +1833,6 @@ msgstr "${startdate} a ${enddate}"
 #: plone/app/event/browser/formatted_date.pt:71
 msgid "event_when_sameday"
 msgstr "${date} de ${starttime} a ${endtime}"
+
+msgid "No hi ha elements"
+msgstr "No hay elementos"
