--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -1843,3 +1843,14 @@ msgstr "url"
 msgid "usuari_connectat"
 msgstr "Usuari connectat:"
 
+msgid "event_url"
+msgstr "Més informació"
+
+msgid "contact_name"
+msgstr "Persona de contacte"
+
+
+
+
+
+
