--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -32,12 +32,48 @@ msgstr "Type the code from the picture shown below"
 msgid "Send"
 msgstr "send"
 
-msgid "UPCNews"
-msgstr "UPC Today"
-
 msgid "more_news_link"
 msgstr "More news"
 
 msgid "label_full_size"
 msgstr "Full-size image:"
 
+############
+# portlets #
+############
+
+msgid "FullNews"
+msgstr "News with image"
+
+msgid "NoticiesPropi"
+msgstr "News"
+
+msgid "AgendaGW"
+msgstr "Events"
+
+msgid "portlet_homepage_title"
+msgstr "Welcome"
+
+msgid "portlet_calendar_title"
+msgstr "Calendar"
+
+msgid "portlet_collection_title"
+msgstr "Collection"
+
+msgid "portlet_login_title"
+msgstr "Login"
+
+msgid "portlet_navigation_title"
+msgstr "Navigation menu"
+
+msgid "portlet_rss_title"
+msgstr "RSS"
+
+msgid "portlet_static_title"
+msgstr "HTML Portlet"
+
+msgid "portlet_poll_title"
+msgstr "Poll"
+
+msgid "UPCNews"
+msgstr "UPC Today"
